--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="icon" href="images/s.png">
 </head>
 <body>
-    <h1>
+    <h1 class="head">
         Hey! Welcome to my site
     </h1>
+    <h2 class="head">
+        I am Shobhit Raj <br>
+        I am an engineering student.
+    </h2>
 </body>
 </html>
