feat: added my address

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </h1>
     <h2 class="head">
         I am Shobhit Raj <br>
-        I am an engineering student.
+        I am an engineering student. <br>
+        I live in Jabalpur
     </h2>
 </body>
 </html>
