feat: updated index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Hey! Welcome to my site
     </h1>
     <h2 class="head">
-        I am Shobhit Raj <br>
+        I am Shobhit Raj. <br>
         I am an engineering student. <br>
         I live in Jabalpur
     </h2>
