fix: add project details

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         I am an engineering student. <br>
         I live in Jabalpur
     </h2>
+    <h3>
+        I have worked on some CLI apps. I will showcase them here tomorrow.
+    </h3>
 </body>
 </html>
