--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         I am an engineering student. <br>
         I live in Jabalpur
     </h2>
-    <h3>
+    <h3 class="head">
         I have worked on some CLI apps. I will showcase them here tomorrow.
     </h3>
 </body>
