feat: added my interests

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <h3 class="head">
         I have worked on some CLI apps. I will showcase them here tomorrow.
     </h3>
+    <h4 class="head">
+        I love watching movies and web series <br>
+        Currently I am watching House of Dragons
+    </h4>
 </body>
 </html>
